--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&callback=initMap" async defer></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
