--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#home">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">À propos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQ</a>
-                    </li>
-                </ul>
+                                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#home">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">À propos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="faq.html">FAQ</a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -49,6 +49,26 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="hero-overlay"></div>
+        <div class="hero-logo">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <!-- Main -->
+                <path d="M50 80 Q60 70 70 80 Q80 90 90 80 Q100 70 110 80 Q120 90 130 80 Q140 70 150 80" 
+                      stroke="currentColor" stroke-width="3" fill="none"/>
+                <path d="M60 85 Q70 75 80 85 Q90 95 100 85 Q110 75 120 85 Q130 95 140 85" 
+                      stroke="currentColor" stroke-width="3" fill="none"/>
+                <!-- Skeleton/Spine -->
+                <path d="M100 20 L100 180" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 40 L110 40" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 60 L110 60" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 80 L110 80" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 100 L110 100" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 120 L110 120" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 140 L110 140" stroke="currentColor" stroke-width="2" fill="none"/>
+                <path d="M90 160 L110 160" stroke="currentColor" stroke-width="2" fill="none"/>
+                <!-- Head -->
+                <circle cx="100" cy="15" r="8" stroke="currentColor" stroke-width="2" fill="none"/>
+            </svg>
+        </div>
         <div class="container">
             <div class="row min-vh-100 align-items-center">
                 <div class="col-lg-8 col-md-10 mx-auto text-center">
@@ -91,8 +111,26 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
-                             alt="Cabinet d'ostéopathie" class="img-fluid rounded">
+                        <div class="osteopath-logo">
+                            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                                <!-- Main -->
+                                <path d="M50 80 Q60 70 70 80 Q80 90 90 80 Q100 70 110 80 Q120 90 130 80 Q140 70 150 80" 
+                                      stroke="#000" stroke-width="3" fill="none"/>
+                                <path d="M60 85 Q70 75 80 85 Q90 95 100 85 Q110 75 120 85 Q130 95 140 85" 
+                                      stroke="#000" stroke-width="3" fill="none"/>
+                                <!-- Skeleton/Spine -->
+                                <path d="M100 20 L100 180" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 40 L110 40" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 60 L110 60" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 80 L110 80" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 100 L110 100" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 120 L110 120" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 140 L110 140" stroke="#666" stroke-width="2" fill="none"/>
+                                <path d="M90 160 L110 160" stroke="#666" stroke-width="2" fill="none"/>
+                                <!-- Head -->
+                                <circle cx="100" cy="15" r="8" stroke="#666" stroke-width="2" fill="none"/>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -108,22 +146,32 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-6 mb-4">
+                <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-running"></i>
                         </div>
                         <h4>Ostéopathie du Sport</h4>
-                        <p>Prévention et traitement des blessures sportives et amélioration des performances. Master STAPS en recherche sportive. Utilisation du Strapping et K-tape (bande collante spécial sportif).</p>
+                        <p><strong>Master 2 STAPS :</strong> Recherche performance sportive.<br>
+                        <strong>K-tape®</strong> et <strong>Strapping</strong> pour la prévention et le traitement des blessures sportives.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-hand-holding-heart"></i>
+                            <i class="fas fa-bone"></i>
                         </div>
-                        <h4>Ostéopathie Myofasciale</h4>
-                        <p>Traitement des tensions musculaires et fasciales pour un relâchement optimal.</p>
+                        <h4>Ostéopathie Structurelle</h4>
+                        <p>Techniques manuelles sur les articulations, les muscles et les ligaments pour restaurer la mobilité et soulager les douleurs musculo-squelettiques.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-stomach" style="color: #000000; background: #ffffff; border-radius: 50%; padding: 10px;"></i>
+                        </div>
+                        <h4>Ostéopathie Viscérale</h4>
+                        <p>Traitement des organes internes et des viscères pour améliorer leur mobilité et leur fonction, notamment pour les troubles digestifs et gynécologiques.</p>
                     </div>
                 </div>
             </div>
@@ -204,6 +252,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Configuration -->
+    <script src="config.js"></script>
     <!-- Google Maps API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&callback=initMap" async defer></script>
     <!-- Custom JS -->
