Mise à jour finale : image mur.jpg, bandeau noir, bouton Doctolib bleu

--- a/faq.html
+++ b/faq.html
@@ -160,32 +160,17 @@
                             </div>
                         </div>
 
+
+
                         <!-- Question 6 -->
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="heading6">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                                    <i class="fas fa-balance-scale me-3"></i>
-                                    Quelle est la différence entre kinésithérapie et ostéopathie ?
-                                </button>
-                            </h2>
-                            <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
-                                    <p><strong>Kinésithérapie :</strong> Approche spécifique et ciblée, axée sur la rééducation fonctionnelle d'une zone précise du corps. Le kinésithérapeute travaille sur prescription médicale.</p>
-                                    <p><strong>Ostéopathie :</strong> Approche globale qui considère le corps dans son ensemble. L'ostéopathe recherche les causes à distance du problème et peut traiter sans prescription médicale.</p>
-                                    <p>Ces deux approches sont complémentaires et peuvent être utilisées ensemble pour optimiser la récupération.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Question 7 -->
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="heading7">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
                                     <i class="fas fa-clock me-3"></i>
                                     Combien de séances sont nécessaires ?
                                 </button>
                             </h2>
-                            <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#faqAccordion">
+                            <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
                                     <p>Le nombre de séances varie selon plusieurs facteurs :</p>
                                     <ul>
@@ -199,15 +184,15 @@
                             </div>
                         </div>
 
-                        <!-- Question 8 -->
+                        <!-- Question 7 -->
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="heading8">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
+                            <h2 class="accordion-header" id="heading7">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
                                     <i class="fas fa-exclamation-triangle me-3"></i>
                                     Y a-t-il des contre-indications ?
                                 </button>
                             </h2>
-                            <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#faqAccordion">
+                            <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
                                     <p>L'ostéopathie présente très peu de contre-indications, mais il est important de me signaler :</p>
                                     <ul>
@@ -217,6 +202,23 @@
                                         <li>Si vous êtes enceinte</li>
                                     </ul>
                                     <p>Dans certains cas, je peux être amené à vous rediriger vers votre médecin traitant pour un avis médical avant de commencer le traitement.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Question 8 -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading8">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
+                                    <i class="fas fa-balance-scale me-3"></i>
+                                    Quelle est la différence entre ostéopathie et kinésithérapie ?
+                                </button>
+                            </h2>
+                            <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    <p><strong>Ostéopathie :</strong> Approche globale qui considère le corps dans son ensemble. L'ostéopathe recherche les causes à distance du problème et peut traiter sans prescription médicale.</p>
+                                    <p><strong>Kinésithérapie :</strong> Approche spécifique et ciblée, axée sur la rééducation fonctionnelle d'une zone précise du corps. Le kinésithérapeute travaille sur prescription médicale.</p>
+                                    <p>Ces deux approches sont complémentaires et peuvent être utilisées ensemble pour optimiser la récupération.</p>
                                 </div>
                             </div>
                         </div>
@@ -231,8 +233,8 @@
                             </h2>
                             <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    <p><strong>Chiropraxie :</strong> Se concentre principalement sur la colonne vertébrale et le système nerveux. Les manipulations sont souvent plus directes et peuvent être plus "spectaculaires".</p>
                                     <p><strong>Ostéopathie :</strong> Approche plus globale qui traite l'ensemble du corps (articulations, muscles, viscères, crâne). Les techniques sont variées et adaptées à chaque patient.</p>
+                                    <p><strong>Chiropraxie :</strong> Se concentre principalement sur la colonne vertébrale et le système nerveux. Les manipulations sont souvent plus directes et peuvent être plus "spectaculaires".</p>
                                     <p>Les deux approches sont efficaces, le choix dépend souvent de la préférence du patient et de la nature du problème.</p>
                                 </div>
                             </div>
@@ -243,12 +245,12 @@
                             <h2 class="accordion-header" id="heading10">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">
                                     <i class="fas fa-volume-up me-3"></i>
-                                    Est-ce obligatoire de "craquer" pendant une séance ?
+                                    Est-ce que les techniques de trust (craquement) sont obligatoires ?
                                 </button>
                             </h2>
                             <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    <p><strong>Non, ce n'est pas obligatoire !</strong> Le "craquement" (ou cavitation articulaire) n'est qu'une technique parmi d'autres en ostéopathie.</p>
+                                    <p><strong>Non, ce n'est pas obligatoire !</strong> Les techniques de trust (craquement) ne sont qu'une technique parmi d'autres en ostéopathie.</p>
                                     <p><strong>Utilité :</strong> Oui, dans certaines conditions et après des tests différentiels appropriés. Cette technique peut être efficace pour libérer certaines articulations.</p>
                                     <p><strong>Consentement éclairé :</strong> Avant toute manipulation, je vous explique toujours ce que je vais faire et vous demande votre accord. Vous pouvez refuser à tout moment.</p>
                                     <p>Il existe de nombreuses autres techniques douces qui ne produisent pas de bruit et sont tout aussi efficaces.</p>
@@ -266,9 +268,8 @@
                             </h2>
                             <div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    <p><strong>Oui, en général.</strong> L'important est que vous soyez à l'aise et que je puisse travailler normalement.</p>
-                                    <p><strong>Tenue recommandée :</strong> Privilégiez une tenue adéquate comme un short ou une brassière. Vous pouvez garder vos sous-vêtements.</p>
-                                    <p><strong>Confidentialité :</strong> Vous restez seul(e) pour vous changer et je vous laisse le temps nécessaire. La consultation se déroule dans un cadre professionnel et respectueux.</p>
+                                    <p><strong>Vous garderez vos sous-vêtements.</strong> L'important est que vous soyez à l'aise et que je puisse travailler normalement.</p>
+                                    <p><strong>Tenue recommandée :</strong> Privilégiez une tenue adéquate comme un short ou une brassière.</p>
                                     <p>Si vous préférez garder certains vêtements, nous nous adapterons. L'essentiel est votre confort.</p>
                                 </div>
                             </div>
