--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#home">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">À propos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQ</a>
-                    </li>
-                </ul>
+                                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#home">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">À propos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="faq.html">FAQ</a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -53,7 +53,6 @@
             <div class="row min-vh-100 align-items-center">
                 <div class="col-lg-8 col-md-10 mx-auto text-center">
                     <h1 class="hero-title">Emmanuel Lainé</h1>
-                    <h2 class="hero-subtitle">Ostéopathe D.O.</h2>
                     <p class="hero-description">
                         Cabinet d'ostéopathie à Paris 6ème<br>
                         Approche thérapeutique manuelle et globale
@@ -91,7 +90,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="images/fond.JPG" 
                              alt="Cabinet d'ostéopathie" class="img-fluid rounded">
                     </div>
                 </div>
@@ -108,22 +107,32 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-6 mb-4">
+                <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-running"></i>
                         </div>
                         <h4>Ostéopathie du Sport</h4>
-                        <p>Prévention et traitement des blessures sportives et amélioration des performances. Master STAPS en recherche sportive. Utilisation du Strapping et K-tape (bande collante spécial sportif).</p>
+                        <p><strong>Master 2 STAPS :</strong> Recherche performance sportive.<br>
+                        <strong>K-tape®</strong> et <strong>Strapping</strong> pour la prévention et le traitement des blessures sportives.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-hand-holding-heart"></i>
+                            <i class="fas fa-bone"></i>
                         </div>
-                        <h4>Ostéopathie Myofasciale</h4>
-                        <p>Traitement des tensions musculaires et fasciales pour un relâchement optimal.</p>
+                        <h4>Ostéopathie Structurelle</h4>
+                        <p>Techniques manuelles sur les articulations, les muscles et les ligaments pour restaurer la mobilité et soulager les douleurs musculo-squelettiques.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <img src="images/logo_visceral_2.jpg" alt="Viscéral" style="width: 60px; height: 60px; object-fit: contain;">
+                        </div>
+                        <h4>Ostéopathie Viscérale</h4>
+                        <p>Traitement des organes internes et des viscères pour améliorer leur mobilité et leur fonction, notamment pour les troubles digestifs et gynécologiques.</p>
                     </div>
                 </div>
             </div>
@@ -204,6 +213,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Configuration -->
+    <script src="config.js"></script>
     <!-- Google Maps API -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&callback=initMap" async defer></script>
     <!-- Custom JS -->
