Correction logo viscéral : object-fit contain et fond blanc

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <img src="images/logo_visceral_2.jpg" alt="Viscéral" style="width: 60px; height: 60px; object-fit: cover; border-radius: 50%;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <img src="images/logo_visceral_2.jpg" alt="Viscéral" style="width: 60px; height: 60px; object-fit: contain; border-radius: 50%; background: white;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                             <i class="fas fa-stomach" style="display: none; font-size: 2rem;"></i>
                         </div>
                         <h4>Ostéopathie Viscérale</h4>
