Harmonisation : icône estomac FontAwesome pour viscéral

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <img src="images/logo_visceral.JPG" alt="Viscéral" style="width: 60px; height: 60px; object-fit: contain; border-radius: 50%; background: white;">
+                            <i class="fas fa-stomach"></i>
                         </div>
                         <h4>Ostéopathie Viscérale</h4>
                         <p>Traitement des organes internes et des viscères pour améliorer leur mobilité et leur fonction, notamment pour les troubles digestifs et gynécologiques.</p>
