Amélioration Google Maps : gestion d'erreurs et fallback amélioré

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!-- Configuration -->
     <script src="config.js"></script>
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&callback=initMap&libraries=marker" async defer></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
