Solution SVG : icônes personnalisées noir et blanc

--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-running"></i>
+                            <svg width="50" height="50" viewBox="0 0 50 50" fill="white">
+                                <circle cx="25" cy="25" r="20" fill="none" stroke="white" stroke-width="2"/>
+                                <path d="M15 20 L20 15 L25 20 L30 15 L35 20 M15 30 L20 25 L25 30 L30 25 L35 30" stroke="white" stroke-width="2" fill="none"/>
+                                <circle cx="20" cy="18" r="2" fill="white"/>
+                                <circle cx="30" cy="28" r="2" fill="white"/>
+                            </svg>
                         </div>
                         <h4>Ostéopathie du Sport</h4>
                         <p><strong>Master 2 STAPS :</strong> Recherche performance sportive.<br>
@@ -120,7 +125,11 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-bone"></i>
+                            <svg width="50" height="50" viewBox="0 0 50 50" fill="white">
+                                <path d="M15 25 Q25 15 35 25 Q25 35 15 25 Z" fill="white"/>
+                                <path d="M20 20 L30 20 M20 30 L30 30" stroke="black" stroke-width="1"/>
+                                <circle cx="25" cy="25" r="3" fill="black"/>
+                            </svg>
                         </div>
                         <h4>Ostéopathie Structurelle</h4>
                         <p>Techniques manuelles sur les articulations, les muscles et les ligaments pour restaurer la mobilité et soulager les douleurs musculo-squelettiques.</p>
@@ -129,7 +138,11 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fa-solid fa-stomach"></i>
+                            <svg width="50" height="50" viewBox="0 0 50 50" fill="white">
+                                <ellipse cx="25" cy="25" rx="15" ry="10" fill="white"/>
+                                <path d="M15 25 Q25 20 35 25 Q25 30 15 25" fill="none" stroke="black" stroke-width="1"/>
+                                <path d="M20 22 Q25 20 30 22 M20 28 Q25 30 30 28" fill="none" stroke="black" stroke-width="1"/>
+                            </svg>
                         </div>
                         <h4>Ostéopathie Viscérale</h4>
                         <p>Traitement des organes internes et des viscères pour améliorer leur mobilité et leur fonction, notamment pour les troubles digestifs et gynécologiques.</p>
