--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <img src="images/icon_sport.jpg" alt="Sport" style="width: 60px; height: 60px; object-fit: contain;">
+                            <img src="images/icon_sport.jpg" alt="Sport">
                         </div>
                         <h4>Ostéopathie du Sport</h4>
                         <p><strong>Master 2 STAPS :</strong> Recherche performance sportive.<br>
@@ -120,7 +120,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <img src="images/icon_structure.jpg" alt="Structure" style="width: 60px; height: 60px; object-fit: contain;">
+                            <img src="images/icon_structure.jpg" alt="Structure">
                         </div>
                         <h4>Ostéopathie Structurelle</h4>
                         <p>Techniques manuelles sur les articulations, les muscles et les ligaments pour restaurer la mobilité et soulager les douleurs musculo-squelettiques.</p>
@@ -129,7 +129,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <img src="images/icon_visceral.jpg" alt="Viscéral" style="width: 60px; height: 60px; object-fit: contain;">
+                            <img src="images/icon_visceral.jpg" alt="Viscéral">
                         </div>
                         <h4>Ostéopathie Viscérale</h4>
                         <p>Traitement des organes internes et des viscères pour améliorer leur mobilité et leur fonction, notamment pour les troubles digestifs et gynécologiques.</p>
