--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <img src="images/icon_visceral.jpg" alt="Viscéral">
+                            <img src="images/icon_viscerale.png" alt="Viscéral">
                         </div>
                         <h4>Ostéopathie Viscérale</h4>
                         <p>Traitement des organes internes et des viscères pour améliorer leur mobilité et leur fonction, notamment pour les troubles digestifs et gynécologiques.</p>
