--- a/index.html
+++ b/index.html
@@ -190,7 +190,18 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="map" class="map-container"></div>
+                    <div class="map-container">
+                        <img src="https://maps.googleapis.com/maps/api/staticmap?center=7+rue+Coëtlogon,+75006+Paris&zoom=16&size=600x400&maptype=roadmap&markers=color:red%7C7+rue+Coëtlogon,+75006+Paris&key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30" 
+                             alt="Cabinet Emmanuel Lainé - 7 rue Coëtlogon, 75006 Paris"
+                             style="width: 100%; height: 100%; object-fit: cover; border-radius: 8px;">
+                        <div class="map-overlay">
+                            <a href="https://maps.google.com/?q=7+rue+Coëtlogon,+75006+Paris" 
+                               target="_blank" 
+                               class="btn btn-primary btn-sm">
+                                <i class="fas fa-external-link-alt me-2"></i>Voir sur Google Maps
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -213,10 +224,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Configuration -->
-    <script src="config.js"></script>
-    <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&callback=initMap&libraries=marker" async defer></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
