🚴‍♂️ MEGA UPDATE: Fiche Google Business + Carte Vélo Bike-Friendly + Météo
🏪 FICHE GOOGLE BUSINESS:
- Intégration fiche d'établissement à droite de la carte
- Avis Google avec étoiles (5.0/5)
- Horaires d'ouverture détaillés
- Actions rapides (Appel, Email, Doctolib)
- Lien direct vers votre fiche Google
- Design professionnel et informatif

🚴‍♂️ CARTE BIKE-FRIENDLY (Onglets):
- Option A: Onglets [Localisation] + [Accès Vélo]
- Carte cycliste avec itinéraires optimisés
- Widget météo cycliste simple (API gratuite)
- Conditions de roulage en temps réel
- Stations Vélib' simulées (St-Germain, Mabillon, Odéon)
- Informations pratiques (parking vélos, vestiaire)

🌤️ MÉTÉO CYCLISTE:
- API OpenWeatherMap gratuite (1000 calls/day)
- Température, vent, conditions
- Conseils cyclistes intelligents
- Indicateur couleur selon conditions
- Fallback si API indisponible

🎨 AMÉLIORATIONS DESIGN:
- Layout 50/50 (carte/fiche Google)
- Onglets Bootstrap intégrés
- Responsive mobile optimisé
- CSS enrichi pour tous les nouveaux éléments
- Cohérence visuelle maintenue

🚀 INNOVATION:
- Premier ostéopathe 'Bike-Friendly' à Paris
- Différenciation unique sur le marché
- Attire la clientèle cycliste active
- Image moderne et écologique

--- a/faq.html
+++ b/faq.html
@@ -299,7 +299,7 @@
                     <p class="lead mb-4">N'hésitez pas à me contacter pour toute question spécifique</p>
                     <div class="cta-buttons">
                         <a href="index.html#contact" class="btn btn-primary me-3">
-                            <i class="fas fa-phone me-2"></i>Nous contacter
+                            <i class="fas fa-phone me-2"></i>Contact
                         </a>
                         <a href="https://www.doctolib.fr/osteopathe/paris/emmanuel-laine" 
                            target="_blank" 
