--- a/index.html
+++ b/index.html
@@ -285,24 +285,20 @@
                                         <h6 class="mb-3"><i class="fas fa-bicycle me-2"></i>Stations Vélib' & Pistes Cyclables</h6>
                                         <!-- Carte des stations Vélib' et pistes cyclables -->
                                         <iframe
-                                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=7+rue+Coëtlogon+75006+Paris&zoom=17"
+                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=station+vélib+près+Emmanuel+Lainé+Ostéopathe+Saint-Germain-des-Prés+Paris&zoom=16"
                                             width="100%" 
                                             height="350" 
                                             style="border:0; border-radius: 12px;" 
                                             allowfullscreen="" 
                                             loading="lazy" 
                                             referrerpolicy="no-referrer-when-downgrade"
-                                            title="Cabinet et stations Vélib' à proximité">
+                                            title="Stations Vélib' autour du Cabinet Emmanuel Lainé">
                                         </iframe>
                                     </div>
                                     
                                     <div class="bike-stations mt-3 p-3 bg-white rounded border">
                                         <div id="velib-stations-list">
-                                            <!-- Les stations Vélib' seront chargées ici par l'API -->
-                                            <div class="text-center text-muted">
-                                                <i class="fas fa-spinner fa-spin me-2"></i>
-                                                Chargement des stations Vélib'...
-                                            </div>
+                                            <!-- Les stations Vélib' seront chargées automatiquement -->
                                         </div>
                                     </div>
                                 </div>
@@ -418,14 +414,14 @@
                                     <div class="transport-map">
                                         <h6 class="mb-3"><i class="fas fa-map me-2"></i>Stations Métro & Bus - Zone Cabinet</h6>
                                         <iframe
-                                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=7+rue+Coëtlogon+75006+Paris&zoom=17"
+                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=station+métro+bus+près+Emmanuel+Lainé+Ostéopathe+Saint-Germain-des-Prés+Paris&zoom=15"
                                             width="100%" 
                                             height="300" 
                                             style="border:0; border-radius: 12px;" 
                                             allowfullscreen="" 
                                             loading="lazy" 
                                             referrerpolicy="no-referrer-when-downgrade"
-                                            title="Cabinet et transports à proximité">
+                                            title="Stations métro et bus autour du Cabinet Emmanuel Lainé">
                                         </iframe>
                                     </div>
                                 </div>
