Vélo: iframe Google Maps en mode recherche Vélib centré sur 7 rue Coëtlogon

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                         <p class="small text-muted mb-3">📍 Cliquez sur la carte pour voir les stations Vélib' autour du cabinet</p>
                                         <!-- Carte des stations Vélib' et pistes cyclables -->
                                         <iframe
-                                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=7+rue+Coëtlogon,+75006+Paris&zoom=16"
+                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=velib+7+rue+Co%C3%ABtlogon+75006+Paris&center=48.847500,2.332200&zoom=16"
                                             width="100%" 
                                             height="350" 
                                             style="border:0; border-radius: 12px;" 
