--- a/index.html
+++ b/index.html
@@ -384,61 +384,10 @@
                                         </div>
                                     </div>
                                     
-                                    <div class="map-container">
-                                        <h6 class="mb-3"><i class="fas fa-bicycle me-2"></i>Stations Vélib' & Pistes Cyclables</h6>
-                                        <p class="small text-muted mb-3">📍 Cliquez sur la carte pour voir les stations Vélib' autour du cabinet</p>
-                                        <!-- Carte des stations Vélib' et pistes cyclables -->
-                                        <iframe
-                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=stations+V%C3%A9lib%27+officielles+autour+de+7+rue+Co%C3%ABtlogon+75006+Paris&center=48.847500,2.332200&zoom=17"
-                                            width="100%" 
-                                            height="350" 
-                                            style="border:0; border-radius: 12px;" 
-                                            allowfullscreen="" 
-                                            loading="lazy" 
-                                            referrerpolicy="no-referrer-when-downgrade"
-                                            title="Stations Vélib' officielles autour du cabinet">
-                                        </iframe>
-                                        <div class="mt-3">
-                                            <h6 class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>Stations Vélib' précises</h6>
-                                            <div class="row g-3">
-                                                <div class="col-md-4">
-                                                    <iframe
-                                                        src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=V%C3%A9lib%27+Rennes+75006+Paris&center=48.847500,2.332200&zoom=17"
-                                                        width="100%"
-                                                        height="200"
-                                                        style="border:0; border-radius: 10px;"
-                                                        allowfullscreen=""
-                                                        loading="lazy"
-                                                        referrerpolicy="no-referrer-when-downgrade"
-                                                        title="Vélib' - Rennes 75006 Paris">
-                                                    </iframe>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <iframe
-                                                        src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=V%C3%A9lib%27+S%C3%A8vres+Babylone+75006+Paris&center=48.847500,2.332200&zoom=17"
-                                                        width="100%"
-                                                        height="200"
-                                                        style="border:0; border-radius: 10px;"
-                                                        allowfullscreen=""
-                                                        loading="lazy"
-                                                        referrerpolicy="no-referrer-when-downgrade"
-                                                        title="Vélib' - Sèvres Babylone 75006 Paris">
-                                                    </iframe>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <iframe
-                                                        src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCscVGufFzNODJbmT_DJyPY8JVXjOPtA30&q=V%C3%A9lib%27+Saint-Sulpice+75006+Paris&center=48.847500,2.332200&zoom=17"
-                                                        width="100%"
-                                                        height="200"
-                                                        style="border:0; border-radius: 10px;"
-                                                        allowfullscreen=""
-                                                        loading="lazy"
-                                                        referrerpolicy="no-referrer-when-downgrade"
-                                                        title="Vélib' - Saint-Sulpice 75006 Paris">
-                                                    </iframe>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="p-3 bg-white rounded border">
+                                        <h6 class="mb-2"><i class="fas fa-bicycle me-2"></i>Accès Vélo</h6>
+                                        <p class="small text-muted">Ouvrir les stations Vélib' autour du cabinet dans Google Maps</p>
+                                        <a class="btn btn-outline-primary" href="https://maps.app.goo.gl/C5Bs2HTK7JFP8pzN7" target="_blank" rel="noopener">Voir les stations Vélib' sur Google&nbsp;Maps</a>
                                     </div>
                                     
 
