Vélo: iframe affichant la carte fournie + lien fallback

--- a/index.html
+++ b/index.html
@@ -384,10 +384,18 @@
                                         </div>
                                     </div>
                                     
-                                    <div class="p-3 bg-white rounded border">
-                                        <h6 class="mb-2"><i class="fas fa-bicycle me-2"></i>Accès Vélo</h6>
-                                        <p class="small text-muted">Ouvrir les stations Vélib' autour du cabinet dans Google Maps</p>
-                                        <a class="btn btn-outline-primary" href="https://maps.app.goo.gl/C5Bs2HTK7JFP8pzN7" target="_blank" rel="noopener">Voir les stations Vélib' sur Google&nbsp;Maps</a>
+                                    <div class="map-container">
+                                        <h6 class="mb-2"><i class="fas fa-bicycle me-2"></i>Stations Vélib' autour du cabinet</h6>
+                                        <iframe
+                                            src="https://maps.app.goo.gl/C5Bs2HTK7JFP8pzN7"
+                                            width="100%"
+                                            height="350"
+                                            style="border:0; border-radius: 12px;"
+                                            allowfullscreen=""
+                                            loading="lazy"
+                                            title="Stations Vélib' autour du cabinet">
+                                        </iframe>
+                                        <p class="small text-muted mt-2">Problème d'affichage ? <a href="https://maps.app.goo.gl/C5Bs2HTK7JFP8pzN7" target="_blank" rel="noopener">Ouvrir dans Google Maps</a></p>
                                     </div>
                                     
 
