--- a/index.html
+++ b/index.html
@@ -387,13 +387,14 @@
                                     <div class="map-container">
                                         <h6 class="mb-2"><i class="fas fa-bicycle me-2"></i>Stations Vélib' autour du cabinet</h6>
                                         <iframe
-                                            src="https://maps.app.goo.gl/C5Bs2HTK7JFP8pzN7"
+                                            src="https://www.google.com/maps?q=V%C3%A9lib%27+autour+de+7+rue+Co%C3%ABtlogon+75006+Paris&ll=48.847500,2.332200&z=16&output=embed"
                                             width="100%"
                                             height="350"
                                             style="border:0; border-radius: 12px;"
                                             allowfullscreen=""
                                             loading="lazy"
-                                            title="Stations Vélib' autour du cabinet">
+                                            referrerpolicy="no-referrer-when-downgrade"
+                                            title="Stations Vélib' autour du cabinet (embed)">
                                         </iframe>
                                         <p class="small text-muted mt-2">Problème d'affichage ? <a href="https://maps.app.goo.gl/C5Bs2HTK7JFP8pzN7" target="_blank" rel="noopener">Ouvrir dans Google Maps</a></p>
                                     </div>
