Contact: mise à jour horaires (samedi et dimanche fermés)

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="contact-item text-center h-100">
                         <i class="fas fa-clock text-primary fs-2 mb-3"></i>
                         <h5>Horaires</h5>
-                        <p><strong>Lun-Ven :</strong> 8h-20h<br><strong>Sam :</strong> 9h-17h<br><strong>Dim :</strong> Fermé</p>
+                        <p><strong>Lun-Ven :</strong> 8h-20h<br><strong>Sam :</strong> Fermé<br><strong>Dim :</strong> Fermé</p>
                     </div>
                 </div>
             </div>
