✨ Amélioration bouton WhatsApp: design moderne avec dégradé vert

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                         <p><a href="tel:0767723994" class="fw-bold">07 67 72 39 94</a><br><small class="text-muted">Répondeur 24h/24</small></p>
                         <div class="mt-2">
                             <a href="https://wa.me/33767723994?text=Bonjour%2C%20je%20souhaiterais%20prendre%20rendez-vous" 
-                               class="btn btn-success btn-sm" target="_blank" rel="noopener">
-                                <i class="fab fa-whatsapp me-1"></i>WhatsApp
+                               class="btn whatsapp-btn" target="_blank" rel="noopener">
+                                <i class="fab fa-whatsapp me-2"></i>WhatsApp
                             </a>
                         </div>
                     </div>
