--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <!-- Photo -->
                 <div class="col-lg-4 mb-4">
                     <div class="profile-image-container text-center">
-                        <img src="images/RO.jpeg" alt="Emmanuel Lainé, Ostéopathe D.O." class="profile-image img-fluid rounded-circle shadow">
+                        <img src="images/RO.JPG" alt="Emmanuel Lainé, Ostéopathe D.O." class="profile-image img-fluid rounded-circle shadow">
                     </div>
                 </div>
                 
@@ -435,8 +435,24 @@
                             <div class="tab-pane fade" id="bike-pane" role="tabpanel">
                                 <div class="bike-friendly-section">
                                     <div class="row mb-3">
-
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
+                                            <div class="weather-widget p-3 bg-light rounded">
+                                                <h6><i class="fas fa-cloud-sun me-2 text-primary"></i>Météo Cycliste</h6>
+                                                <div id="cycling-weather">
+                                                    <div class="d-flex justify-content-between align-items-center">
+                                                        <span class="weather-temp" id="weather-temp">Chargement...</span>
+                                                        <span class="weather-condition" id="weather-condition"></span>
+                                                    </div>
+                                                    <div class="small text-muted mt-1">
+                                                        <i class="fas fa-wind me-1"></i>Vent: <span id="wind-speed">--</span> km/h
+                                                    </div>
+                                                    <div class="cycling-advice mt-2">
+                                                        <small class="badge bg-success" id="cycling-status">Conditions idéales</small>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
                                             <div class="bike-info p-3 bg-primary text-white rounded">
                                                 <h6><i class="fas fa-bicycle me-2"></i>Cabinet Bike-Friendly</h6>
                                                 <ul class="list-unstyled small mb-0">
@@ -686,6 +702,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
+    <!-- Weather JS for cycling -->
+    <script src="js/weather.js"></script>
 
 </body>
 </html> 
