📝 Mise à jour: photo profil_site.JPG + métro Sèvres Babylone + horaires 8h10-20h30

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <!-- Photo -->
                 <div class="col-lg-4 mb-4">
                     <div class="profile-image-container text-center">
-                        <img src="images/RO.JPG" alt="Emmanuel Lainé, Ostéopathe D.O." class="profile-image img-fluid rounded-circle shadow">
+                        <img src="images/profil_site.JPG" alt="Emmanuel Lainé, Ostéopathe D.O." class="profile-image img-fluid rounded-circle shadow">
                     </div>
                 </div>
                 
@@ -252,7 +252,7 @@
                     <div class="contact-item text-center h-100">
                         <i class="fas fa-map-marker-alt text-primary fs-2 mb-3"></i>
                         <h5>Adresse du Cabinet</h5>
-                        <p><strong>7 rue Coëtlogon</strong><br>75006 Paris<br><small class="text-muted">Métro Saint-Germain-des-Prés</small></p>
+                        <p><strong>7 rue Coëtlogon</strong><br>75006 Paris<br><small class="text-muted">Métro Sèvres Babylone</small></p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 mb-4">
@@ -279,7 +279,7 @@
                     <div class="contact-item text-center h-100">
                         <i class="fas fa-clock text-primary fs-2 mb-3"></i>
                         <h5>Horaires</h5>
-                        <p><strong>Lun-Ven :</strong> 8h-20h<br><strong>Sam :</strong> Fermé<br><strong>Dim :</strong> Fermé</p>
+                        <p><strong>Lun-Ven :</strong> 8h10-20h30<br><strong>Sam :</strong> Fermé<br><strong>Dim :</strong> Fermé</p>
                     </div>
                 </div>
             </div>
