🔧 Fix: Ajout cache busting pour la photo profil_site.JPG

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     <div class="hero-buttons">
                         <div class="hero-buttons-container">
                             <a href="#appointment" class="btn btn-primary btn-lg">
-                                <i class="fas fa-calendar-alt me-2"></i>Prendre RDV
-                            </a>
-                            <a href="#contact" class="btn btn-outline-light btn-lg">
+                            <i class="fas fa-calendar-alt me-2"></i>Prendre RDV
+                        </a>
+                        <a href="#contact" class="btn btn-outline-light btn-lg">
                                 <i class="fas fa-phone me-2"></i>Contact
-                            </a>
+                        </a>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                 <!-- Photo -->
                 <div class="col-lg-4 mb-4">
                     <div class="profile-image-container text-center">
-                        <img src="images/profil_site.JPG" alt="Emmanuel Lainé, Ostéopathe D.O." class="profile-image img-fluid rounded-circle shadow">
+                        <img src="images/profil_site.JPG?v=2" alt="Emmanuel Lainé, Ostéopathe D.O." class="profile-image img-fluid rounded-circle shadow">
                     </div>
                 </div>
                 
@@ -385,7 +385,7 @@
                                                             <div class="line-badge me-2" style="background: #00643c; color: white; padding: 3px 8px; border-radius: 15px; font-weight: bold; font-size: 0.8rem;">
                                                                 12
                                                             </div>
-                                                            <div>
+                            <div>
                                                                 <strong>Rennes</strong>
                                                             </div>
                                                         </div>
@@ -541,7 +541,7 @@
                                 
                                 <div class="info-item d-flex align-items-start mb-3">
                                     <i class="fas fa-map-marker-alt text-primary me-3 mt-1"></i>
-                                    <div>
+                            <div>
                                         <h6 class="mb-1">Adresse</h6>
                                         <div>7 rue Coëtlogon<br>75006 Paris</div>
 
@@ -679,9 +679,9 @@
                         <a href="https://share.google/mokp4CiUM2a2LzvsH" target="_blank" class="btn btn-outline-primary">
                             <i class="fab fa-google me-2"></i>Voir tous les avis Google
                         </a>
-                    </div>
-                </div>
-            </section>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer py-4">
